# rtc-tools-bess-demo

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  Jenkinsfile  README.md  pyproject.toml  session-ses_1782.md
.github/: dependabot.yml
continuous_intraday/input/: initial_state.csv  timeseries_import.csv
continuous_intraday/model/: .gitignore  BESSIntraday.mo
continuous_intraday/src/: bess_intraday.py  plot_results.py
doc/sphinx/_build/doctrees/: index.doctree
doc/sphinx/_build/html/: genindex.html  index.html  searchindex.js
doc/sphinx/_build/html/_sources/: index.rst.txt
docs/: ARCHITECTURE.md  CODING_GUIDELINES.md  Makefile  conf.py  continuous_intraday.rst  index.rst  scheduling.rst
docs/_build/doctrees/: environment.pickle
docs/_build/html/: .buildinfo  objects.inv  search.html
docs/adr/: 001_multi_band_support.md
model/: .gitignore  BESS.mo
scheduling/input/: timeseries_import.csv
scheduling/model/: BESS.mo
scheduling/src/: bess.py  plot_results.py
scripts/: e2e_client.py  e2e_test.py
service/: main.py  model_registry.py  otel_setup.py  routes.py  solver_runner.py
service/solvers/: intraday.py  scheduling.py
service/translation/: diagnostics.py  pe_to_rtc.py  reasoning.py  rtc_to_pe.py  setpoints.py
src/: bess.py  plot_results.py
tests/: conftest.py  test_afrr_energy_bids.py  test_api.py  test_debug_dump_integration.py  test_diagnostics.py  test_model_registry.py  test_reasoning.py  test_reserves.py  test_translation.py
