[project]
name = "rtc-tools-bess-demo"
version = "0.1.0"
description = "Simple RTC-Tools BESS optimisation demo"
authors = [
    {name = "PortfolioEnergy", email = "info@portfolioenergy.com"},
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "rtc-tools>=2.7.0b3",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "pandas>=2.2.3",
]

[dependency-groups]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opentelemetry-api~=1.39",
    "opentelemetry-sdk~=1.39",
    "opentelemetry-exporter-otlp-proto-grpc~=1.39",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
]
dev = [
    {include-group = "docs"},
    {include-group = "service"},
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "coverage>=7.0.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["service"]

[project.scripts]
bess-service = "service.main:start"
