[project]
name = "rtc-tools-bess-demo"
version = "0.1.0"
description = "Simple RTC-Tools BESS optimisation demo"
authors = [
    {name = "PortfolioEnergy", email = "info@portfolioenergy.com"},
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "rtc-tools>=2.8.0a2",
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    {include-group = "docs"},
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
